appDeployment/heathens-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heathens-deployment
  labels:
    apps: heathens-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heathens-deployment
  # pod definition:-
  template:
    metadata:
      labels:
        app: heathens-deployment
    spec:
      containers:
        - name: heathens-deployment
          image: inblack67/heathens:latest
          ports:
            - containerPort: 5000
apiVersion: v1
kind: Service
metadata:
  name: heathens-service
spec:
  selector:
    app: heathens-deployment
  type: LoadBalancer # external service => accepts external requests
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30001 # access through browser => range => 30000 to 32767
