appDeployment/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-deployment
  template:
    metadata:
      labels:
        app: redis-deployment
    spec:
      containers:
        - name: redis-deployment
          image: redis
          ports:
            - containerPort: 6379
# conf seperation in one file
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis-deployment # to connect to pod through label
  ports:
    - protocol: TCP
      port: 6379 # expose service port
      targetPort: 6379 # pod/container port
